# claimlens

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py  server_helpers.py
.github/workflows/: ci.yml
dataset/: README.md  claims.csv  evidence_requirements.csv  sample_claims.csv  user_history.csv
docs/: BENCHMARKING.md  EMBED.md  EVALUATION.md  GUARDRAILS.md  HARNESS_PRINCIPLES.md  HLD.md  IMAGE_PROTOCOL.md  INTEGRATION.md  INTEGRATIONS.md  MODEL_ROUTING.md  PRESENTATION.md  PROMPT_INJECTION.md  README.md  REVIEW.md  ROADMAP.md  SCENARIOS.md  SCENARIO_COVERAGE.md  SECURITY.md  TOOLS.md  deck.html
evaluation/: dashboard.py  main.py  metrics.py  report.py
evidence_review/: __init__.py  cache.py  capture_token.py  config.py  context_builder.py  dataio.py  intake.py  judge.py  perception.py  pipeline.py  prompts.py  router.py  scenarios.py  schema.py  usage.py
evidence_review/embed/: __init__.py  envelope.py  images.py  service.py
evidence_review/harness/: __init__.py  auth.py  context.py  escalation.py  registry.py  sanitize.py  tool.py  trace.py
evidence_review/integrations/: __init__.py  connectors.py  events.py  registry.py
pwa/: README.md  app.js  index.html  manifest.json  serve.py  styles.css  sw.js  ui-base.js  ui-landing.js  ui-messenger.js
tests/: conftest.py  test_auth.py  test_capture_token.py  test_docs_sync.py  test_embed.py  test_embed_e2e.py  test_intake_security.py  test_integrations.py  test_pipeline_mock.py  test_prompt_injection.py  test_router.py  test_schema.py
(+16 files in other folders)
